fixed scaling of about on smaller screens again and fixed link to paint

--- a/css/styles.css
+++ b/css/styles.css
@@ -270,6 +270,10 @@ h4 {
         margin: 0 auto;
         margin-bottom: 20px;
     }
+    
+    .about-height {
+        height: auto;
+    }
     .contact-border{
         border-right:none;
     }
